# VRto3D

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README-linux.md  README.md  ViveTrackerAdapter.stl  _config.yml  changelog.md  vrto3d.sln
.github/: FUNDING.yml
.github/workflows/: Build.yml  BuildLinux.yml  UpdateChangelog.yml  UpdateWiki.yml  pages.yml
auto_depth/: auto_depth.lua
docs/: PROFILE_SYSTEM.md  UEVR-MONITOR-MODE.md
game_configs/: RealVR.ini
game_configs/uevr/: AD_toggle.lua
installer/: README.md  VRto3D-Installer.iss  install.sh
tools/: make_fp_edid.py  migrate_profiles.cpp
utils/: CMakeLists.txt  LICENSE  README.md
utils/driverlog/: CMakeLists.txt  driverlog.cpp  driverlog.h  util_driverlog.vcxproj
utils/filter-accela-hamilton/: accela_hamilton_runtime.h
utils/vrmath/: CMakeLists.txt  accela_hamilton_runtime.h  one_euro_filter.h  util_vrmath.vcxproj  vrmath.h
vrto3d/: CMakeLists.txt  room_setup.cpp  vrto3d.vcxproj
vrto3d/probe/: CMakeLists.txt  RESULTS.md  probe_direct_mode.cpp  probe_direct_mode.h  probe_log.h  probe_main.cpp
vrto3d/probe/driver/: driver.vrdrivermanifest
vrto3d/protocols/: wlr-layer-shell-unstable-v1.xml
vrto3d/resources/: driver.vrresources
vrto3d/resources/input/: vrto3d_profile.json
vrto3d/resources/localization/: localization.json
vrto3d/resources/settings/: default.vrsettings
vrto3d/shaders/: compile_shaders.sh  fullscreen.vert  repack.frag
vrto3d/src/: app_id_mgr.cpp  app_id_mgr.h  auto_depth.cpp  auto_depth.h  device_provider.cpp  device_provider.h  direct_mode_component.cpp  direct_mode_component.h  dx11_renderer.cpp  dx11_renderer.h  focus_context.h  focus_policy.h  hmd_device_driver - Copy.cpp  hmd_device_driver.cpp  hmd_device_driver.h  hmd_driver_factory.cpp  json_manager.cpp  json_manager.h  key_mappings.h  overlay_mgr.cpp  overlay_mgr.h  platform.h  platform_linux.cpp  platform_win32.cpp  screenshot.cpp  screenshot.h  vr_recenter.cpp  vr_recenter.h
vrto3d/src/osd/: osd_input.cpp  osd_input.h  osd_input_linux.cpp  osd_input_win32.cpp  osd_keymap.cpp  osd_keymap.h  osd_menu.cpp  osd_menu.h  osd_renderer.cpp  osd_renderer.h  osd_renderer_vk.cpp
vrto3d/src/platform/: platform.h  platform_linux.cpp  platform_win32.cpp
vrto3d/src/presenter/: display_timing_helper.cpp  display_timing_helper.h  display_utils.h  leiasr_presenter.cpp  leiasr_presenter.h  nv_3dvision_suppressor.cpp  nv_3dvision_suppressor.h  nvd3dum_osd_patcher.cpp  nvd3dum_osd_patcher.h  nvstereo_dx9_presenter.cpp  nvstereo_dx9_presenter.h  output_presenter.h  presenter_factory.cpp  swapchain_presenter_base.h  vk_presenter.h  vk_presenter_factory.cpp  vk_swapchain_util.cpp  vk_swapchain_util.h  wayland_presenter.cpp  wayland_presenter.h  wibblewobble_presenter.cpp  wibblewobble_presenter.h  wibblewobble_presenter_linux.cpp  wibblewobble_presenter_linux.h  window_presenter.cpp  window_presenter.h  wwclient.h  x11_modeline.cpp  x11_modeline.h  x11_presenter.cpp  x11_presenter.h
vrto3d/src/presenter/wayland_protocols/: wlr-layer-shell-client-protocol.h
vrto3d/src/vk/: direct_mode_component_vk.cpp  direct_mode_component_vk.h  vk_context.cpp  vk_context.h  vk_renderer.cpp  vk_renderer.h
vrto3d/vrto3d/: driver.vrdrivermanifest
vrto3d/vrto3d/resources/: nvtimings.json
vrto3d/vrto3d/resources/settings/: default.vrsettings
vrto3d_profiles/: AC2-Win64-Shipping.exe_config.json  ACOdyssey.exe_config.json  ACValhalla.exe_config.json  ADR1FT-Win64-Shipping.exe_config.json  AMS2AVX.exe_config.json  AirCar-Win64-Shipping.exe_config.json  AlanWake2.exe_config.json  Arca_OpenVRSteam.exe_config.json  Avowed-Win64-Shipping.exe_config.json  Avowed-WinGDK-Shipping.exe_config.json  Battlezone_DX12.exe_config.json  Bugsnax.exe_config.json  Cemu.exe_config.json  Chronos-Win64-Shipping.exe_config.json  Cyberpunk2077.exe_config.json  DD2.exe_config.json  DOOMTheDarkAges.exe_config.json  DOOMVFRx64.exe_config.json  DeadIsland-Win64-Shipping.exe_config.json  DeadIsland-WinGDK-Shipping.exe_config.json  DeoVR.exe_config.json  EliteDangerous64.exe_config.json  Epic Roller Coasters.exe_config.json  EternalStrandsSteam-Win64-Shipping.exe_config.json  F1_23.exe_config.json  F1_24.exe_config.json  FacetedFlight.exe_config.json  FlightSimulator.exe_config.json  FlightSimulator2024.exe_config.json  FlyDangerous.exe_config.json  GalGun2-Win64-Shipping.exe_config.json  GhostOfTsushima.exe_config.json  GnomesVsFairies.exe_config.json  GoWR.exe_config.json  Grip-Win64-Shipping.exe_config.json  HUMANITY.exe_config.json  Habitat-WinGDK-Shipping.exe_config.json  Hellblade2-Win64-Shipping.exe_config.json  Hellblade2-WinGDK-Shipping.exe_config.json  HogwartsLegacy.exe_config.json  (+66 more)
vrto3dvision/: vrto3dvision.vcxproj
vrto3dvision/src/: 3dv_device_driver.cpp  3dv_device_driver.h  D3D11_tex.cpp  D3D11_tex.h  device_provider.cpp  device_provider.h  hmd_device_driver.cpp  hmd_device_driver.h  hmd_driver_factory.cpp  key_mappings.h
vrto3dvision/vrto3dvision/: driver.vrdrivermanifest
vrto3dvision/vrto3dvision/resources/input/: vrto3dvision_profile.json
vrto3dvision/vrto3dvision/resources/localization/: localization.json
vrto3dvision/vrto3dvision/resources/settings/: default.vrsettings
